--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint:css": "npx stylelint \"src/**/*.css\"",
     "lint:style": "npx stylelint \"src/**/*.{js,ts,jsx,tsx}\"",
     "prettify": "prettier --write src",
-    "prepare": "cd .. && husky install frontend/.husky",
+    "prepare": "husky install .husky",
     "eject": "react-scripts eject",
     "doc:types": "tsc --project tsconfig.dHelper.json",
     "doc:html": "jsdoc -c jsdoc.config.json"
