--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Datart",
-  "name": "Datart",
+  "short_name": "MBI",
+  "name": "Matrixed BI",
   "icons": [],
   "start_url": ".",
   "display": "standalone",
