--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,13 +62,18 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ github.event_name != 'pull_request' || steps.merged.outputs.CONTINUE == 'true' }}
 
+      - name: Get lowercase repository owner
+        id: repo_owner
+        run: |
+          echo "OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ steps.tag.outputs.TAG }}
+            ghcr.io/${{ steps.repo_owner.outputs.OWNER }}/${{ github.event.repository.name }}:${{ steps.tag.outputs.TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
         if: ${{ github.event_name != 'pull_request' || steps.merged.outputs.CONTINUE == 'true' }}
